Finished ReadMe for Task 1 and added comments

--- a/sarahdeconink_1.ipynb
+++ b/sarahdeconink_1.ipynb
@@ -21,18 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the pandas library\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first grade is 88\n",
+      "There are 5 grades total.\n",
+      "The average test score is 92.2\n",
+      "The lowest grade is 88.\n",
+      "The highest gradde is 97.\n",
+      "The standard deviation of the grades is 3.8340579025361627.\n",
+      "An easier way to show descriptive stats on the grades is to call the grades.describe() function:\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -47,20 +61,35 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grades = pd.Series([88, 97, 92, 95, 89])\n",
-    "grades[0]\n",
-    "grades.count()\n",
-    "grades.mean()\n",
-    "grades.min()\n",
-    "grades.max()\n",
-    "grades.std()\n",
-    "grades.describe()"
+    "\n",
+    "first_grade = grades[0]\n",
+    "print(f\"The first grade is {first_grade}\")\n",
+    "\n",
+    "count_grades = grades.count()\n",
+    "print(f\"There are {count_grades} grades total.\")\n",
+    "\n",
+    "mean_grades = grades.mean()\n",
+    "print(f\"The average test score is {mean_grades}\")\n",
+    "\n",
+    "min_grade = grades.min()\n",
+    "print(f\"The lowest grade is {min_grade}.\")\n",
+    "\n",
+    "max_grade = grades.max()\n",
+    "print(f\"The highest gradde is {max_grade}.\")\n",
+    "\n",
+    "std_grade = grades.std()\n",
+    "print(f\"The standard deviation of the grades is {std_grade}.\")\n",
+    "\n",
+    "print(\"An easier way to show descriptive stats on the grades is to call the grades.describe() function:\")\n",
+    "grades.describe()\n",
+    "\n"
    ]
   },
   {
@@ -73,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -85,19 +114,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# use a dictionary to create a series\n",
     "grades = pd.Series({'Wally':87, 'Eva':100, 'Sam':94})\n",
     "grades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -106,18 +136,19 @@
        "100"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Call for Eva's grade\n",
     "grades['Eva']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +157,19 @@
        "87"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Call for Wally's grade\n",
     "grades.Wally"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -146,33 +178,34 @@
        "array([ 87, 100,  94])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Show an array of grade values\n",
     "grades.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    67\n",
-       "1    82\n",
-       "2    79\n",
-       "3    77\n",
-       "4    68\n",
-       "5    87\n",
+       "0    99\n",
+       "1    90\n",
+       "2    75\n",
+       "3    88\n",
+       "4    86\n",
+       "5    89\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,6 +214,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "# generate random temperatures\n",
     "temps = np.random.randint(60, 101, 6)\n",
     "\n",
     "temperatures = pd.Series(temps)\n",
@@ -190,69 +224,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "67"
+       "75"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Diplay the minimum temp\n",
     "temperatures.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "87"
+       "99"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Diplay the maximum temp\n",
     "temperatures.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count     6.000000\n",
-       "mean     76.666667\n",
-       "std       7.865537\n",
-       "min      67.000000\n",
-       "25%      70.250000\n",
-       "50%      78.000000\n",
-       "75%      81.250000\n",
-       "max      87.000000\n",
+       "mean     87.833333\n",
+       "std       7.730890\n",
+       "min      75.000000\n",
+       "25%      86.500000\n",
+       "50%      88.500000\n",
+       "75%      89.750000\n",
+       "max      99.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generate descriptive data on the temps\n",
     "temperatures.describe()"
    ]
   }
